full book adding functinoality with correct col alignment

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@
     display: grid;
     grid-template-rows: 2rem;
     grid-auto-rows: 2rem;
+    row-gap: .25rem;
 }
 
 .col-labels {
@@ -101,4 +102,13 @@
     border-bottom: 1px solid #f472b6;
     vertical-align: center;
     text-align: center;
+}
+
+.library-container > div {
+    display: grid;
+    grid-template-columns: 3fr 2fr repeat(3, 1fr);
+    vertical-align: center;
+    text-align: center;
+    /* margin: .25rem; */
+    font-size: 1.25rem;
 }
